# conrrad-sdk

./: README.md  mock_logs.jsonl  pyproject.toml  test.json  test_failover_sim.py  test_wal_storm.py
.github/workflows/: docs-governance.yml
conrrad_sdk/: __init__.py  _sunset_telemetry.py  runtime_events.py
deploy/: docker-compose.hybrid.yml  docker-compose.sdk-client.yml
docs/: CAUSALITY_GLOSSARY.md  CONRRAD_DEGRADATION_SEMANTICS.md  CONRRAD_DOCTRINE_CONTRACT.md  CONRRAD_SDK_INSTALL_CONTRACT.md  INTEGRITY_GAP_PLAYBOOK.md  POLICY_OUTPUT_MATRIX.md  TRUTH_HIERARCHY.md
docs/golden/runtime_event_v1/: accepted_llm_chat.json  accepted_tool.json  lineage_tree.json  quarantined_orphan_parent.json  rejected_malformed_hash.json
docs/playground/: causal-walkthrough.html  docker-compose.yml
kap_escrow/: __init__.py  api.py  engine.py
kernell_sdk/: __init__.py  budget_killer.py  chaos_engine.py  config.py  economic_agent.py  launcher.py  policy_engine.py  slo_engine.py  slo_report.py  tracer.py  wallet.py
kernell_sdk/compliance/: __init__.py  causal_seal.py
kernell_sdk/router/: api.py  execution_resilience.py  hardening.py  invariant_runner.py  kernell_pay.py  lease_manager.py  marketplace.py  reconciler.py  reconciliation_executor.py  simulation_engine.py  wal_fuzzer.py  wal_replicator.py
kernell_sdk/router/tests/: test_kernell_pay_fuzzer.py  test_marketplace_fuzzer.py  test_reconciliation_fuzzer.py
kernell_sdk/runtime/: adaptive_budget.py  budget_proxy.py  calibration_engine.py  execution_manager.py  execution_proxy.py  execution_supervisor.py  policy_tuner.py  redis_store.py  shadow_interceptor.py  watchdog.py
kernell_sdk/runtime/tests/: test_kill_switch.py
kernell_sdk/tools/: behavioral_analyzer.py  case_explorer.py  financial_reconciliator.py  shadow_health_monitor.py  stability_dashboard.py  test_regime_shift.py  tuner_simulator.py
scripts/: apply_provider_patch.py  apply_shadow_error_patch.py  apply_shadow_patch.py  check-docs-governance.sh  kernell_shadow_mode.service  logrotate_kernell.conf  receipt_validator_daemon.py  replay_engine.py  shadow_runner.sh  snapshot_manager.py  verify_golden_replay_hash.py
src/: engine.rs
tests/: test_legacy_wrapper_parity.py
