[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "conrrad-sdk"
version = "2.0.0"
description = "CONRRAD SDK — Governed causal runtime for persistent cognitive systems. Public SDK surface of CONRRAD sovereign operational infrastructure."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CONRRAD", email = "protocol@conrrad.dev"}
]
keywords = [
    "ai", "agents", "runtime", "cognitive", "continuity",
    "governance", "causal", "observability", "conrrad",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "redis>=4.0.0",
    "pynacl>=1.5.0",
]

[project.urls]
Homepage = "https://conrrad.online"
Repository = "https://github.com/Greco-Italico/conrrad-sdk"
Documentation = "https://conrrad.online/docs"
"Bug Tracker" = "https://github.com/Greco-Italico/conrrad-sdk/issues"

[project.optional-dependencies]
# Legacy compatibility — users who had kap-escrow can install conrrad-sdk
# and get the same functionality.
legacy = []

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kap_escrow.kap_core"
python-source = "."
