[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
[project]
name = "kap-escrow"
version = "1.2.1"
description = "KAP escrow for agent habitats — public SDK surface of CONRRAD sovereign operational infrastructure (runtime governance; inference exceptional)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CONRRAD", email = "protocol@conrrad.dev"}
]
keywords = [
    "ai", "agents", "escrow", "a2a", "ap2", "merkle", "protocol",
    "blockchain", "transactions", "trustless", "agent-to-agent",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "redis>=4.0.0",
    "pynacl>=1.5.0",
]

[project.urls]
Homepage = "https://conrrad.dev"
Repository = "https://github.com/Greco-Italico/conrrad-sdk"
Documentation = "https://conrrad.dev/docs"
"Bug Tracker" = "https://github.com/Greco-Italico/conrrad-sdk/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kap_escrow.kap_core"
python-source = "."
